assets/less/responsive/mobile/basic/body.less
@mobileNavWidth: 20em;
@transitionTime: .3s;

body {
	margin: 0 auto;
	padding: 0 !important;
	min-width: none !important;
	width: 100% !important;
	zoom: 0 !important;
	noscript {
		.row(12);
		margin-top: 10px;
	}

	#topNav {
		.transition(@transitionTime ease);
		&.push {
			margin-right: (-1 * @mobileNavWidth) !important;
			float: right;
			position: relative;
		}
	}

	#container {
		height: 100% !important;
		padding-top: 50px;
		padding-bottom: 10px !important;
		#main, #sidebar-left, #sidebar-right {
			height: 100%;
		}
		#main {
			.column(12);
			.transition(@transitionTime ease);
			&.hidden {
				display: none !important;
				.column(0);
			}
			&.push {
				margin-right: (-1 * @mobileNavWidth);
			}
		}
		#mobileSearch {
			.column(12);
			height: 100%;
			.searchBar {
				margin-top: 10px !important;
				position: relative;
				height: 100% !important;
				.addFriend, .sendMessage {
					padding: 5px 2px !important;
				}
				.formSearch {
					height: 38px;
				}
				.searchDrop {
					margin-top: 5px;
					height: 100% !important;
					overflow: hidden;
					position: relative;
					padding-bottom: 55px !important;
					.box-fix;
					.searchSuggestions {
						height: 100% !important;
						max-height: none !important;
					}
				}
			}
		}
		#sidebar-left {
			width: @mobileNavWidth;
			float: left;
			margin-left: (-1 * @mobileNavWidth);
			overflow: scroll;
			padding: 0;
			-webkit-overflow-scrolling: touch;
			.box-fix;
			.transition(margin-left @transitionTime ease);
			&.show {
				margin: -50px 0 -50px 0;
				height: ~"calc(100% + 50px)";
				background: @primary;
			}
			.mobileMenu {
				.unstyled;
				width: 100%;
				a {
					.column(12,12,left,0);
					height: 50px;
					overflow: hidden;
					border-bottom: 1px solid @green;
					border-top: 1px solid #bbb;
					&:first-child {
						border-top: none;
					}
					&:last-child {
						border-bottom-color: #bbb	;
						position: relative;
						&:after {
							content: ' ';
							width: 100%;
							height: 1px;
							background: @green;
							position: absolute;
							left: 0;
							bottom: 0;
							display: block;
						}
					}
					li {
						.btn;
						.btn--green;
						border: none;
						.border-radius(0);
						float: left;
						width: 100%;
						height: 100%;
						padding: 8px 25px;
						text-align: center;
						span {
							color: #fff;
							width: calc(~"100% - 50px");
							float: left;
							margin-top: 7px;
							display: inline-block;
							span {
								width: 100%;
								text-align: center;
								margin-top: 0px;
							}
						}

					}
					&.full {
						li {
							span {
								display: inline-block;
								text-align: left;
								position: relative;
								span {
									float: right;
									margin: 0;
									padding: 0;
									display: inline-block;
									text-align: center;
								}
							}
						}
					}
					img, i {
						width: 40px;
						margin-top: 0px;
						float: left;
						&.userimg {
							.border-radius(100%);
						}
					}
					img {
						margin-top: -3px;
					}
					i {
						color: #000;
						margin-top: 2px;
					}
				}
			}
		}
	}

	.notificationWrap {
		margin-bottom: 40px;
	}

	&:not(.registerView) {
		padding-top: 50px;
	}
}

